<resources>
    <string name="app_name">ergasia2</string>
    <string name="fantasy_books">Fantasy Books</string>
    <string name="go_to_front_page">Go to Front Page</string>
    <string name="view_cart">View Cart</string>
    <string name="online_book_shop">Online Book Shop</string>
    <string name="enter_email">Enter Email</string>
    <string name="log_in_to_your_account">Log In to your Account</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an account? Sign up now</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Log In</string>
    <string name="use_speech_recognition_to_enter_password">Use Speech Recognition To Enter Password</string>
    <string name="use_speech_recognition_to_enter_email">Use Speech Recognition To Enter Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_log_in_now">Already have an account? Log in now</string>
    <string name="create_an_account">Create an Account</string>
    <string name="mystery">Mystery</string>
    <string name="fantasy">Fantasy</string>
    <string name="welcome_guest">Welcome Guest</string>
    <string name="log_off">Log Off</string>
    <string name="book_categories">Book Categories:</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="go_to_shopping_cart">Go to Shopping Cart</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="go_to_main_page">Go to Main Page</string>
    <string name="go_to_login_page">Go to Login Page</string>
    <string name="purchase">Purchase</string>
    <string name="total_price">Total Price:</string>
    <string name="total_cost">Total Cost:</string>
    <string name="textview">TextView</string>
    <string name="price">Price:</string>
    <string name="_456">456</string>
    <string name="availability">Availability:</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="lorem_ipsum">lorem ipsum</string>
    <string name="todo">TODO</string>
</resources>